--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,12 @@
+v3.7.0	# 28/10/2023
+- new: SYN,FIN SYN,FIN scan blocked
+- new: SYN,RST SYN,RST scan blocked
+- new: ALL SYN,RST,ACK,FIN,URG scan blocked
+- new: FIN,RST FIN,RST scan blocked
+- new: ACK,FIN FIN scan blocked
+- new: ACK,PSH PSH scan blocked
+- new: ACK,URG URG scan blocked
+
 v3.6.0	# 28/07/2021
 - new: enable Spotify to identify audio devices on the network
 - new: mDNS support
